# openferris

./: .gitignore  CLAUDE.md  Cargo.toml  IDENTITY.md  ISSUES.md  README.md  SOUL.md  SPEC.md  STREAMING_PLAN.md  USER.md  run.sh
skills/: README.md
skills/daily-briefing/: SKILL.md
skills/default/: SKILL.md
skills/email-reply/: SKILL.md
skills/goal-pursuit/: SKILL.md
skills/goal-runner/: SKILL.md
skills/triage/: SKILL.md
src/: agent.rs  client.rs  config.rs  counterparty.rs  daemon.rs  email.rs  gmail.rs  gws_cli.rs  lib.rs  main.rs  memories.rs  protocol.rs  schedule.rs  skills.rs  storage.rs  telegram.rs  text.rs  tui.rs  web.rs
src/llm/: llamacpp.rs  mock.rs  mod.rs  model_adapter.rs  openai_compat.rs
src/tools/: ask_claude.rs  ask_codex.rs  datetime.rs  files.rs  gws.rs  logs.rs  mod.rs  ocr.rs  run_skill.rs  schedule.rs  scrape.rs  search.rs  send_email.rs  stealth.rs  telegram.rs  wakeup.rs  web.rs
src/web/: app.css  app.js  index.html
tests/: agent_integration.rs
